fix: Banner on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 
 :root{
     --hero: url("../img/hero_5.jpg");
-    --hero-mobile: url("../img/hero_mobile.jpg");
+    --hero-mobile: url("../img/hero_mobile_2.jpg");
     --primary: #fea000;
     --primary-hover: #f7aa14;
 }
